kubernetes/infra/authentik/referencegrant.yaml
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: ReferenceGrant
metadata:
  name: wireguard-routes-to-authentik-server
  namespace: authentik
spec:
  from:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      namespace: wireguard
  to:
    - group: ""
      kind: Service
      name: authentik-server
